--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Unity WebGL Player | VHN Vins</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/VHN.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/VHN_2.json");
     </script>
   </head>
   <body>
-    <div id="gameContainer" style="width: 900px; height: 1600px; margin: auto"></div>
+    <div id="gameContainer" style="width: 450px; height: 800px; margin: auto"></div>
   </body>
 </html>
